--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
 				<li class="top-menu-item sub-title"><%=link_to "コンテンツ", root_path %></li>
 				<li class="top-menu-item sub-title"><%=link_to "ビジョン", root_path %></li>
 				<li class="top-menu-item sub-title"><%=link_to "メンバー", root_path %></li>
-				<li class="top-menu-item sub-title"><%=link_to "お問い合わせ", root_path %></li>
+				<li class="top-menu-item sub-title"><%=link_to "お問い合わせ", inquiry_index_path %></li>
 
 			</ul>
 		</nav>
