--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="clearfix">
+<header class="clearfix bg">
 	<div>
 		<nav>
 		<h1 class="title">5chains</h1>
@@ -10,8 +10,22 @@
 				<li class="top-menu-item sub-title"><%=link_to "ビジョン", root_path %></li>
 				<li class="top-menu-item sub-title"><%=link_to "メンバー", root_path %></li>
 				<li class="top-menu-item sub-title"><%=link_to "お問い合わせ", inquiry_index_path %></li>
-
 			</ul>
+
+			<div id="ham-menu">
+			    <ul>
+				    <li><%=link_to "ホーム", root_path %></li>
+					<li><%=link_to "特徴", root_path %></li>
+					<li><%=link_to "使い方", step_path %></li>
+					<li><%=link_to "コンテンツ", root_path %></li>
+					<li><%=link_to "ビジョン", root_path %></li>
+					<li><%=link_to "メンバー", root_path %></li>
+					<li><%=link_to "お問い合わせ", inquiry_index_path %></li>
+			    </ul>
+　　　　　　　</div>
+
+　　　　　　　<div id="menu-background"></div>
+
 		</nav>
 	</div>
 </header>
