--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,20 +7,21 @@
 				<li class="top-menu-item sub-title"><%=link_to "特徴", root_path %></li>
 				<li class="top-menu-item sub-title"><%=link_to "使い方", step_path %></li>
 				<li class="top-menu-item sub-title"><%=link_to "コンテンツ", root_path %></li>
-				<li class="top-menu-item sub-title"><%=link_to "ビジョン", root_path %></li>
+				<li class="top-menu-item sub-title"><%=link_to "ビジョン", vision_path %></li>
 				<li class="top-menu-item sub-title"><%=link_to "メンバー", root_path %></li>
 				<li class="top-menu-item sub-title"><%=link_to "お問い合わせ", inquiry_index_path %></li>
 			</ul>
 
 			<div id="ham-menu">
 			    <ul>
-				    <li><%=link_to "ホーム", root_path %></li>
-					<li><%=link_to "特徴", root_path %></li>
-					<li><%=link_to "使い方", step_path %></li>
-					<li><%=link_to "コンテンツ", root_path %></li>
-					<li><%=link_to "ビジョン", root_path %></li>
-					<li><%=link_to "メンバー", root_path %></li>
-					<li><%=link_to "お問い合わせ", inquiry_index_path %></li>
+				    <br>
+				    <li><%=link_to "ホーム", root_path %></li><br>
+					<li><%=link_to "特徴", root_path %></li><br>
+					<li><%=link_to "使い方", step_path %></li><br>
+					<li><%=link_to "コンテンツ", root_path %></li><br>
+					<li><%=link_to "ビジョン", root_path %></li><br>
+					<li><%=link_to "メンバー", root_path %></li><br>
+					<li><%=link_to "お問い合わせ", inquiry_index_path %></li><br>
 			    </ul>
 　　　　　　　</div>
 
