--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,70 +1,225 @@
-<div class="top-image">
-	<div class="top-wrapper">
-	    <div class="top-zone">
-	      <h1>Each Other Teaching.<br>Friendly Competition.</h1>
-	      <p>Level-Upではユーザー同士で勉強を教えあうことができます<br>わからない問題を投稿して解決法を教えてもらいましょう。</p>
-	    </div>
-	</div>
+
+<div class="top-area">
+		<div id="slideshow" class="slideshow">
+
+				  <img src="../static_pages../views./assets/images/kyousitu2.png" alt="kyousitu2">
+				  <img src="../static_pages../views./assets/images/kyousitu3.jpg" alt="kyousitu3">
+				  <img src="../static_pages../views./assets/images/kyousitu4.jpg" alt="kyousitu4">
+				  <img src="../static_pages../views./assets/images/kyousitu5.jpg" alt="kyousitu5">
+				  <img src="../static_pages../views./assets/images/kyousitu6.jpg" alt="kyousitu6">
+
+
+			<div class="top-wrapper">
+			    <div class="top-zone">
+			      <h1>Each Other Teaching.<br>Friendly Competition.</h1>
+			      <p>Level-Upではユーザー同士で勉強を教えあうことができます<br>わからない問題を投稿して解決法を教えてもらいましょう。</p>
+			    </div>
+			</div>
+
+		</div>
 </div>
-    <div class="lesson-wrapper">
+
+
+<div class="balance">
+
+<div class="exlpain">
+
+	  <div class="explain-head">
+
+			    <h1>特徴の説明</h1>
+			    <h2>『セリフ』</h2>
+			    <p>セリフ２</p>
+
+	  </div>
+
+	  <div class="explain-center">
+      
+				<div class="explain-center-area">
+			          
+				    <div class="explain-center-icon1">
+
+				    </div>
+
+				</div>
+
+				<div class="explain-center-area">
+			          
+				    <div class="explain-center-icon2">
+
+				    </div>
+
+				</div>
+
+				<div class="explain-center-area">
+			          
+				    <div class="explain-center-icon3">
+
+				    </div>
+
+				</div>
+
+	  </div>
+
+	   <div class="explain-zone">
+
+			    <div class="explain-area">
+
+				    <div class="explain-icon1">
+
+				    </div>
+
+				    <div class="explain-coment">
+				    <p>ああああああああああああああ</p>
+
+				    </div>
+
+			    </div>
+
+			    <div class="explain-area">
+
+				    <div class="explain-icon2">
+
+				    </div>
+
+				    <div class="explain-coment">
+				    <p>いいいいいいいいいいいいいいい</p>
+
+				    </div>
+
+			    </div>
+
+			    <div class="explain-area">
+
+				    <div class="explain-icon3">
+
+				    </div>
+
+				    <div class="explain-coment">
+				    <p>ううううううううううううううう</p>
+
+				    </div>
+
+			    </div>
+			     
+			    
+
+	   </div>
+
+</div>
+
+
+
+<div class="lesson-wrapper">
         
 
 	            <div class="lesson-head">
-	              <p>学べる教科</p>
+	              <p>学習カテゴリー</p>
 	            </div>
 
 	        <div class="lessons">
 
+	            <div class="lesson">
 
-	            <div class="lesson"> 
+	                <div class="lesson-title">
+	            	    <p>国語</p>
+	                </div> 
+
 		            <div class="lesson-icon1">
-		            	
 		            </div>  
+
 		            <div class="lesson-message">
-		            	ああああああああああ
+		            	<p>ああああああああああ</p>
 		            </div>
+
 	            </div>
 
-	            <div class="lesson">  
+	            <div class="lesson"> 
+
+	                <div class="lesson-title">
+	            	    <p>数学</p>
+	                </div>  
+
 		            <div class="lesson-icon2">
-		            	
 		            </div>
+
 		            <div class="lesson-message">
-		            	いいいいいいいいいい
+		            	<p>いいいいいいいいいい</p>
 		            </div>   
+
 		        </div>
 
 	            <div class="lesson">
+
+	                <div class="lesson-title">
+	            	    <p>理科</p>
+	                </div> 
+
 		            <div class="lesson-icon3">
-		            	
 		            </div>
+
 		            <div class="lesson-message">
-		            	うううううううううう
+		            	<p>うううううううううう</p>
 		            </div>
+
 		        </div>
 
 	            <div class="lesson">
+
+	                 <div class="lesson-title">
+	            	    <p>英語</p>
+	                </div> 
+
 		            <div class="lesson-icon4">
-		            	
 		            </div>
+
 		            <div class="lesson-message">
-		            	ええええええええええ
+		            	<p>ええええええええええ</p>
 		            </div>
+
 		        </div>
+
+		        <div class="lesson">
+
+	                <div class="lesson-title">
+	            	    <p>社会</p>
+	                </div> 
+
+		            <div class="lesson-icon5">
+		            </div>  
+
+		            <div class="lesson-message">
+		            	<p>おおおおおおおおおおお</p>
+		            </div>
+
+	            </div>
+
+	            <div class="lesson">
+
+	                <div class="lesson-title">
+	            	    <p>next...</p>
+	                </div> 
+
+		            <div class="lesson-icon6">
+		            </div>  
+
+		            <div class="lesson-message">
+		            	<p>おおおおおおおおおおお</p>
+		            </div>
+
+	            </div>
+
 
 	        </div>
         
-
-
-
-
-    </div>
+</div>
 
 	<div class="message-wrapper">
 	    <div class="coment-zone">
 	      <div class="message-head">
-	        <h2>さぁ、あなたもLevel-upと一緒に成長しましょう</h2>
+	        <h2>さぁ、あなたもLevel-upと一緒に成長しましょう</h2><br>
 	        <h3>Let's growth with "Level-up" !!</h3>
 	      </div>
 	    </div>
 	</div>
+
+</div>	
