--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,15 +1,36 @@
-.top-image{
-  background-image: url(kyousitu2.png);
-  background-size: cover;
+.top-area{
+  width:100%;
+  height:800px;
+
+}
+
+
+.slideshow {
+  position: relative;
+  width: 100%; /* 画像の横幅 */
+  height: 500px; /* 画像の縦幅 */
+}
+
+.slideshow img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  transition: 1s; /* フェードの時間(秒) */
+}
+
+.slideshow .show {
+  opacity: 1;
+  z-index: 1;
 }
 
 .top-wrapper {
   width: 100%;
-  height: 550px;
-  padding: 200px 0 80px 0;
+  height: 710px;
+  padding: 200px 0px 0px 0px;
   color: #99FFFF;
   text-align: center;
-  background: rgba(45,45,45, 0.25);
+  background: rgba(45,45,45, 0.4);
 }
 
 @media (max-width: 800px) {
@@ -53,6 +74,7 @@
   font-size: 55px;
   letter-spacing: 5px;
   opacity:1;
+  font-family:'Tahoma';
 }
 
 @media (max-width: 1000px) {
@@ -74,6 +96,7 @@
   margin-top: 50px;
   opacity: 0.95;
   font-size: 19px;
+  font-family:'Tahoma';
 }
 
 @media (max-width: 1000px) {
@@ -91,127 +114,255 @@
   }
 }
 
+.balance{
+  width:80%;
+  height:100%;
+  margin:0 10% 0% 10%;
+}
+
+.exlpain{
+  width:100%;
+  height:1600px;
+}
+
+.explain-head{
+  width:100%;
+  height:300px;
+}
+
+.explain-head h1{
+  text-align:center;
+}
+
+.explain-head h2{
+  text-align:center;
+}
+
+.explain-head p{
+  text-align:center;
+}
+
+.explain-center{
+  width:100%;
+  height:700px;
+ 
+}
+
+.explain-center-area{
+  float:left;
+  width:290px;
+  height:660px;
+  margin:2.4%;
+  
+}
+
+.explain-center-icon1{
+  width:290px;
+  height:660px;
+  background-image: url(iphone3.jpeg);
+  background-size: cover;
+  
+}
+
+.explain-center-icon2{
+  width:290px;
+  height:660px;
+  background-image: url(iphone3.jpeg);
+  background-size: cover;
+  
+}
+
+.explain-center-icon3{
+  width:290px;
+  height:660px;
+  background-image: url(iphone3.jpeg);
+  background-size: cover;
+  
+}
+
+.explain-zone{
+  width:100%;
+  height:550px;
+
+}
+.explain-area{
+  text-align:center;
+  float: left;
+  width:256px;
+  height:420px;
+  margin:4%;
+}
+
+.explain-icon1{
+  text-align: center;
+  width: 180px;
+  height: 180px;
+  margin:0px 38px 0px 38px;
+  background-image: url(iconex1.png);
+  background-size: cover;
+  
+}
+
+.explain-icon2{
+  text-align: center;
+  width: 180px;
+  height: 180px;
+  margin:0px 38px 0px 38px;
+  background-image: url(iconex1.png);
+  background-size: cover;
+  
+}
+
+.explain-icon3{
+  text-align: center;
+  width: 180px;
+  height: 180px;
+  margin:0px 38px 0px 38px;
+  background-image: url(iconex1.png);
+  background-size: cover;
+  
+}
+
+
+.explain-coment{
+  width:256px;
+  height:240px;
+  background-color:#336666;
+  padding-top:30px;
+}
+
 .lesson-wrapper {
   width: 100%;
-  height: 600px;
-  background-color: rgb(229,247,250);
-
+  height:1600px;
 }
 
-@media (max-width: 1000px) {
-  
-  .lesson-wrapper{
-    height: 1200px;
-  }
-}
-
-
-@media (max-width: 460px) {
-  
-  .lesson-wrapper{
-    height: 2200px;
-  }
-}
 
 .lesson-head {
   width: 100%;
   height: 100px;
-  padding: 40px 0px 10px 0px;
+  margin-top:30px;
 }
 
 
 .lesson-head p {
   text-align: center;
   font-size: 30px;
+  font-family:'arial unicode ms';
+  font-color:#339900;
 }
 
 .lessons{
   width: 100%;
-  height: 500px;
+  height: 1600px;
   text-align: center;
 }
 
 .lesson{
   text-align: center;
   float: left;
-  width: 256px;
-  height: 385px;
-  margin: 2.5%;
-  background-color:red;
+  width: 300px;
+  height: 400px;
+  margin:6% 2% 6% 2%;
   
 }
+
+.lesson-title{
+  width: 300px;
+  padding:5px 0px 0px 0px;
+}
+
+.lesson-title p{
+  font-size:22px;
+  font-family:'arial unicode ms';
+}
+
 .lesson-icon1{
   text-align: center;
   width: 180px;
   height: 180px;
-  margin:0px 38px 0px 38px;
-  background-image: url(kokugo2.jpg);
+  margin:0px 56px 0px 56px;
+  background-image: url(kokugo1.jpg);
   background-size: cover;
   
 }
+
 .lesson-icon2{
   text-align: center;
   width: 180px;
   height: 180px;
-  margin:0px 38px 0px 38px;
-  background-image: url(syakai1.jpg);
+  margin:0px 56px 0px 56px;
+  background-image: url(suugaku6.jpg);
   background-size: cover;
   
 }
+
 .lesson-icon3{
   text-align: center;
   width: 180px;
   height: 180px;
-  margin:0px 38px 0px 38px;
+  margin:0px 56px 0px 56px;
   background-image: url(rika1.jpg);
   background-size: cover;
   
 }
+
+.lesson-icon4{
+  text-align: center;
+  width: 180px;
+  height: 180px;
+  margin:0px 56px 0px 56px;
+  background-image: url(eigo1.jpg);
+  background-size: cover;
+  
+}
+
+.lesson-icon5{
+  text-align: center;
+  width: 180px;
+  height: 180px;
+  margin:0px 56px 0px 56px;
+  background-image: url(syakai1.jpg);
+  background-size: cover;
+  
+}
+
+.lesson-icon6{
+  text-align: center;
+  width: 180px;
+  height: 180px;
+  margin:0px 56px 0px 56px;
+  background-image: url(question1.jpg);
+  background-size: cover;
+  
+}
+
+
 .lesson-message{
-  width:256px;
-  height:205px;
-  background-color:blue;
+  width:300px;
+  height:220px;
+  background-color:#CC3366;
+  padding-top:30px;
 }
 
-@media (max-width:1280px) {
-  
-  .lesson{
-    width: 20%;
-    margin: 2%;
-  }
+.lesson-message p{
+  font-family:'arial unicode ms';
+  font-size:13px;
+  font-color:#888888;
 }
 
-@media (max-width: 1000px) {
-  
-  .lesson{
-    width: 256px;
-    margin: 3% 6% 3% 6% ;
-  }
-}
-
-@media (max-width: 670px) {
-  
-  .lesson{
-    width: 40%;
-    margin: 5%;
-  }
-}
-
-@media (max-width: 460px) {
-  
-  .lesson{
-    width: 256px;
-    margin: 15%;
-  }
-}
 
 
 
 .message-head h3 {
-  font-weight: normal;
+  font-family:'arial unicode ms';
+}
+
+.message-head h2 {
+  font-family:'arial unicode ms';
 }
 
 .message-wrapper {
+  background-color: rgb(229,247,250);
   border-bottom: 1px solid #eee;
   padding-bottom: 80px;
   text-align: center;
