--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,22 +1,14 @@
 
 <div class="top-area">
-		<div id="slideshow" class="slideshow">
-
-				  <img src="../static_pages../views./assets/images/kyousitu2.png" alt="kyousitu2">
-				  <img src="../static_pages../views./assets/images/kyousitu3.jpg" alt="kyousitu3">
-				  <img src="../static_pages../views./assets/images/kyousitu4.jpg" alt="kyousitu4">
-				  <img src="../static_pages../views./assets/images/kyousitu5.jpg" alt="kyousitu5">
-				  <img src="../static_pages../views./assets/images/kyousitu6.jpg" alt="kyousitu6">
-
+		
 
 			<div class="top-wrapper">
 			    <div class="top-zone">
 			      <h1>Each Other Teaching.<br>Friendly Competition.</h1>
-			      <p>Level-Upではユーザー同士で勉強を教えあうことができます<br>わからない問題を投稿して解決法を教えてもらいましょう。</p>
 			    </div>
 			</div>
 
-		</div>
+		
 </div>
 
 
@@ -26,9 +18,9 @@
 
 	  <div class="explain-head">
 
-			    <h1>特徴の説明</h1>
-			    <h2>『セリフ』</h2>
-			    <p>セリフ２</p>
+			    <h1>study-appとは</h1>
+			    <h2>いつでも勉強を教えられるアプリ</h2>
+			    <h3>わからない問題を投稿し解き方を他のユーザーに教えてもらいましょう</h3>
 
 	  </div>
 
@@ -50,59 +42,50 @@
 
 				</div>
 
-				<div class="explain-center-area">
-			          
-				    <div class="explain-center-icon3">
-
-				    </div>
-
-				</div>
+				
 
 	  </div>
 
 	   <div class="explain-zone">
 
-			    <div class="explain-area">
+			    <div class="explain-area1">
 
 				    <div class="explain-icon1">
 
 				    </div>
 
 				    <div class="explain-coment">
-				    <p>ああああああああああああああ</p>
+				    <p>問題のわからない所を投稿しましょう。カメラで問題を撮って、添付することで回答者に問題内容をわかりやすく伝えることができます。</p>
 
 				    </div>
 
 			    </div>
 
-			    <div class="explain-area">
+			    <div class="explain-area2">
 
 				    <div class="explain-icon2">
 
 				    </div>
 
 				    <div class="explain-coment">
-				    <p>いいいいいいいいいいいいいいい</p>
+				    <p>問題の解答を待っている間に他のユーザーさんの投稿を見て、答えられる問題があれば解答して手伝ってあげましょう</p>
 
 				    </div>
 
 			    </div>
 
-			    <div class="explain-area">
+			    <div class="explain-area3">
 
 				    <div class="explain-icon3">
 
 				    </div>
 
 				    <div class="explain-coment">
-				    <p>ううううううううううううううう</p>
+				    <p>問題の投稿と問題の解答を繰り返し、他のユーザーとともに成長してレベルの高い学習領域を目指しましょう。</p>
 
 				    </div>
 
 			    </div>
-			     
-			    
-
 	   </div>
 
 </div>
@@ -128,7 +111,7 @@
 		            </div>  
 
 		            <div class="lesson-message">
-		            	<p>ああああああああああ</p>
+		            	<p>現代文　古典　漢文など</p>
 		            </div>
 
 	            </div>
@@ -143,7 +126,7 @@
 		            </div>
 
 		            <div class="lesson-message">
-		            	<p>いいいいいいいいいい</p>
+		            	<p>数I　数II　数A　数Bなど</p>
 		            </div>   
 
 		        </div>
@@ -158,7 +141,7 @@
 		            </div>
 
 		            <div class="lesson-message">
-		            	<p>うううううううううう</p>
+		            	<p>物理　生物　科学　地学など</p>
 		            </div>
 
 		        </div>
@@ -173,7 +156,7 @@
 		            </div>
 
 		            <div class="lesson-message">
-		            	<p>ええええええええええ</p>
+		            	<p>単語　熟語　文法など</p>
 		            </div>
 
 		        </div>
@@ -188,7 +171,7 @@
 		            </div>  
 
 		            <div class="lesson-message">
-		            	<p>おおおおおおおおおおお</p>
+		            	<p>歴史　地理　公民など</p>
 		            </div>
 
 	            </div>
@@ -203,7 +186,7 @@
 		            </div>  
 
 		            <div class="lesson-message">
-		            	<p>おおおおおおおおおおお</p>
+		            	<p>他の教科も追加予定</p>
 		            </div>
 
 	            </div>
@@ -216,8 +199,8 @@
 	<div class="message-wrapper">
 	    <div class="coment-zone">
 	      <div class="message-head">
-	        <h2>さぁ、あなたもLevel-upと一緒に成長しましょう</h2><br>
-	        <h3>Let's growth with "Level-up" !!</h3>
+	        <h2>あなたもstudy-appで学習してみませんか？</h2><br>
+	        <h3>Let's grow on "study-app" !!</h3>
 	      </div>
 	    </div>
 	</div>
