--- a/app/views/static_pages/vision.html.erb
+++ b/app/views/static_pages/vision.html.erb
@@ -1,2 +1,97 @@
-<div class="vision-head">
+<div class="stead">
+
+	<div class="vision-start1">
+
+		<p class="syakai1">理念</p>
+		<p class="syakai2">--理念を構成する３要素--</p>
+	</div>
+
+    <div class="vision-start2">
+        <p class="syakai3">楽しいを追求し続ける存在となる</p>
+        <p class="syakai4">遊ぶとき、学ぶとき、新しいものに触れるとき、成長するとき、苦しいとき、<br>どんなときでも楽しさがあれば乗り越えられます。様々な形の楽しさをユーザーに<br>与えられるような存在でいられるように、私たちは日々努力しています。</p>
+    </div>
+
+    <div class="vision-main">
+
+	    <div class="vision-main-area">
+
+		    <div class="vision-main-point1">
+
+		    </div>
+            
+            <div class="vision-main-word">
+
+	            <p class="syakai5">思いやりの心は、チームでサービスを作るときに極めて重要な要素です。仲間が困っているときに助けたり、壁にぶつかったりしているときにはアドバイスやサポートをする。見返りを求めて行うのではなく、自然でいて素直に仲間に接する。サービス開発だけにではなく、生きていく上でも必要な大切なパーツの一つです。このパーツを磨いていくことでサービスの質もさらに向上することでしょう。</p>
+
+            </div>
+
+
+	    </div>
+
+	    <div class="vision-main-area">
+
+	        <div class="vision-main-point2">
+
+		    </div>
+
+		    <div class="vision-main-word">
+
+	            <p class="syakai6">楽しんでやることは、質の高いサービスを開発する環境をよりよくするときに必要になる要素です。思いもよらないアイディアを発見できたり、チームの雰囲気が良くなったりと、楽しみながら作ることは様々な付加価値を生み出します。サービス開発していると、苦しく大変な状況に陥ることもきっとあります。ですが、このマインドを持ち合わせていればそんな状況も乗り切ることができると私たちは信じています。</p>
+			</div>
+
+	    </div>
+
+	    <div class="vision-main-area">
+
+	        <div class="vision-main-point3">
+
+		    </div>
+
+		    <div class="vision-main-word">
+
+			    <p class="syakai7">目的が明確であり全員に浸透していることは、チームで何かをするときに一番重要なことだと言ってもおかしくはありません。一人一人が同じ方向を向いていなければ、ゴールに辿り着くことは極めて困難になります。しかし裏を返せば、これを実行することができれるならサービスの質は良い方へ大きく飛躍します。この要素が私たちを支えている重要なものだとしっかり認識して取り組むことで素晴らしいサービスを作ることができると考えています。</p>
+
+		    </div>
+
+	    </div>
+
+		
+
+		
+    </div>
+
+    <div class="vision-main-voice1">
+		<p class="syakai8">社訓</p>
+		<p class="syakai9">--私たちが大切にしていること--</p>
+			
+	</div>
+
+	<div class="vision-main-voice2">
+		<p class="syakai10">全員が前向きに、笑顔で楽しめる環境を作る</p>
+		<p class="syakai11">私たちは相手に楽しんでもらうためにまずは自分たちが楽しんでいこうというマインドを持っています。<br>そして、自分たちが楽しむためにはどうすれば良いか、どんなことが必要かを考え実践します。<br>これらを支える環境づくりに力を入れるということを大切にしています。</p>
+	</div>
+
+    <div class="vision-port">
+
+        <div class="vision-port-ima">
+
+        </div>
+
+    </div>
+
+    <div class="vision-gold">
+
+	    <div class="vision-gold-zzz">
+
+	    	<p class="syakai12">私たちは新しい楽しいを生み出します。</p>
+	    	<p class="syakai13">--We make new fun.--</p>
+
+	    </div>
+
+
+	</div>    
+
 </div>
+
+
+
